Adicionando legenda manualmente com responsividade, gráfico resopnsivo - estava muito comprimido em telas menores

--- a/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Aplicacoes.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Aplicacoes.cshtml
@@ -6,7 +6,7 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<table class="table">
+<table class="table table-responsive">
     <thead>
         <tr>
             @if (User.IsInRole("Admin"))
