--- a/BlockTechMVC/BlockTechMVC/Views/Relatorios/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Relatorios/Index.cshtml
@@ -22,8 +22,10 @@
 </div>
 <br />
 <h4 class="text-center">Valor Por Criptomoeda @ViewData["Data"]</h4>
-<canvas id="graficoCriptomoedas" width="400" height="150">
-</canvas>
+
+<div style="position:relative; min-height:30vh; width:80vw">
+    <canvas id="graficoCriptomoedas" width="400" height="150"></canvas>
+</div>
 
 
 @section Scripts {
