Ajustando porcentagem com duas casas decimais, alterando interface dos investimentos

--- a/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Aplicacoes.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Aplicacoes.cshtml
@@ -6,46 +6,49 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<table class="table table-responsive">
-    <thead>
-        <tr>
-            @if (User.IsInRole("Admin"))
-            {
+<div class="table-responsive">
+    <table class="table">
+        <thead>
+            <tr>
+                @if (User.IsInRole("Admin"))
+                {
+                    <th>
+                        @Html.DisplayNameFor(model => model.ContaCliente.ApplicationUser.Nome)
+                    </th>
+                }
                 <th>
-                    @Html.DisplayNameFor(model => model.ContaCliente.ApplicationUser.Nome)
+                    @Html.DisplayNameFor(model => model.CriptoSaldo.Criptomoeda)
                 </th>
-            }
-            <th>
-                @Html.DisplayNameFor(model => model.CriptoSaldo.Criptomoeda)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CriptoSaldo.Quantidade)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Data)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            @if (User.IsInRole("Admin"))
+                <th>
+                    @Html.DisplayNameFor(model => model.CriptoSaldo.Quantidade)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Data)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
             {
-                <td>
-                    @Html.DisplayFor(modelItem => item.ContaCliente.ApplicationUser.Nome)
-                </td>
+                <tr>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ContaCliente.ApplicationUser.Nome)
+                        </td>
+                    }
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CriptoSaldo.Criptomoeda)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CriptoSaldo.Quantidade)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Data)
+                    </td>
+                </tr>
             }
-            <td>
-                @Html.DisplayFor(modelItem => item.CriptoSaldo.Criptomoeda)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CriptoSaldo.Quantidade)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Data)
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+        </tbody>
+    </table>
+</div>
