--- a/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Index.cshtml
@@ -42,27 +42,28 @@
         <tbody>
             @foreach (var item in Model)
             {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ContaCliente.DataAbertura)
-                </td>
-                @if (User.IsInRole("Admin"))
-                {
+                <tr>
                     <td>
-                        @Html.DisplayFor(modelItem => item.ContaCliente.ApplicationUser.Nome)
+                        @Html.DisplayFor(modelItem => item.ContaCliente.DataAbertura)
                     </td>
-                }
-                <td>
-                    @Html.DisplayFor(modelItem => item.ContaCliente.NumeroConta)
-                </td>
-                <td>
-                    R$ @Html.DisplayFor(modelItem => item.Saldo.SaldoAtualRS)
-                </td>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ContaCliente.ApplicationUser.Nome)
+                        </td>
+                    }
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ContaCliente.NumeroConta)
+                    </td>
+                    <td>
+                        R$ @Html.DisplayFor(modelItem => item.Saldo.SaldoAtualRS)
+                    </td>
 
-                <td>
-                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-dark">Detalhes</a>
-                </td>
-            </tr>
+                    <td>
+                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-dark">Detalhes</a>
+                    </td>
+                </tr>
             }
         </tbody>
     </table>
+</div>
