--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/BitcoinCash.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/BitcoinCash.cshtml
@@ -64,9 +64,9 @@
 
     <hr />
 
-    <h5>Quantidade de Bitcoin Cash: @bitcoinCashQuantidade</h5>
-    <h5>Valor Investido - Bitcoin Cash: R$ @bitcoinCashInvestimento</h5>
-    <h5>Valor Atual - Bitcoin Cash: R$ @bitcoinCashValorReal</h5>
+    <h5>Quantidade: @bitcoinCashQuantidade</h5>
+    <h5>Valor Investido: R$ @bitcoinCashInvestimento</h5>
+    <h5>Valor Atual: R$ @bitcoinCashValorReal</h5>
 
     @if (lucroOuPerda > 0)
     {
@@ -137,9 +137,9 @@ else
     <br />
     <h1 class="text-center">@ViewData["Title"]</h1>
     <br />
-    <h5>Quantidade de Bitcoin Cash: @admBitcoinCashTotal</h5>
-    <h5>Valor Investido - Bitcoin Cash: R$ @BitcoinCashInvestido</h5>
-    <h5>Valor Atual - Bitcoin Cash: R$ @BitcoinCashValorRS</h5>
+    <h5>Quantidade: @admBitcoinCashTotal</h5>
+    <h5>Valor Investido: R$ @BitcoinCashInvestido</h5>
+    <h5>Valor Atual: R$ @BitcoinCashValorRS</h5>
     @if (lucroOuPerdaAdm > 0)
     {
         <h5>Lucro: R$ @lucroOuPerdaAdm</h5>
