--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Ethereum.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Ethereum.cshtml
@@ -62,9 +62,9 @@
 
         <hr />
 
-        <h5>Quantidade de Ethereum: @ethereumQuantidade</h5>
-        <h5>Valor Investido - Ethereum: R$ @ethereumInvestimento</h5>
-        <h5>Valor Atual - Ethereum: R$ @ethereumValorReal</h5>
+        <h5>Quantidade: @ethereumQuantidade</h5>
+        <h5>Valor Investido: R$ @ethereumInvestimento</h5>
+        <h5>Valor Atual: R$ @ethereumValorReal</h5>
 
         @if (lucroOuPerda > 0)
         {
@@ -136,9 +136,9 @@
         <br />
         <h1 class="text-center">@ViewData["Title"]</h1>
         <br />
-        <h5>Quantidade de Ethereum: @admEthereumTotal</h5>
-        <h5>Valor Investido - Ethereum: R$ @EthereumInvestido</h5>
-        <h5>Valor Atual - Ethereum: R$ @EthereumValorRS</h5>
+        <h5>Quantidade: @admEthereumTotal</h5>
+        <h5>Valor Investido: R$ @EthereumInvestido</h5>
+        <h5>Valor Atual: R$ @EthereumValorRS</h5>
         @if (lucroOuPerdaAdm > 0)
         {
             <h5>Lucro: R$ @lucroOuPerdaAdm</h5>
@@ -191,6 +191,5 @@
 
             });
             </script>
-
         }
     }
