--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Litecoin.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Litecoin.cshtml
@@ -62,9 +62,9 @@
 
     <hr />
 
-    <h5>Quantidade de PAX Gold: @litecoinQuantidade</h5>
-    <h5>Valor Investido - PAX Gold: R$ @litecoinInvestimento</h5>
-    <h5>Valor Atual - PAX Gold: R$ @litecoinValorReal</h5>
+    <h5>Quantidade: @litecoinQuantidade</h5>
+    <h5>Valor Investido: R$ @litecoinInvestimento</h5>
+    <h5>Valor Atual: R$ @litecoinValorReal</h5>
 
     @if (lucroOuPerda > 0)
     {
@@ -135,9 +135,9 @@ else
     <br />
     <h1 class="text-center">@ViewData["Title"]</h1>
     <br />
-    <h5>Quantidade de Litecoin: @admLitecoinTotal</h5>
-    <h5>Valor Investido - Litecoin: R$ @LitecoinInvestido</h5>
-    <h5>Valor Atual - Litecoin: R$ @LitecoinValorRS</h5>
+    <h5>Quantidade: @admLitecoinTotal</h5>
+    <h5>Valor Investido: R$ @LitecoinInvestido</h5>
+    <h5>Valor Atual: R$ @LitecoinValorRS</h5>
     @if (lucroOuPerdaAdm > 0)
     {
         <h5>Lucro: R$ @lucroOuPerdaAdm</h5>
