--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/PaxGold.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/PaxGold.cshtml
@@ -63,9 +63,9 @@
 
     <hr />
 
-    <h5>Quantidade de PAX Gold: @paxGoldQuantidade</h5>
-    <h5>Valor Investido - PAX Gold: R$ @paxGoldInvestimento</h5>
-    <h5>Valor Atual - PAX Gold: R$ @paxGoldValorReal</h5>
+    <h5>Quantidade: @paxGoldQuantidade</h5>
+    <h5>Valor Investido: R$ @paxGoldInvestimento</h5>
+    <h5>Valor Atual: R$ @paxGoldValorReal</h5>
 
     @if (lucroOuPerda > 0)
     {
@@ -136,9 +136,9 @@ else
     <br />
     <h1 class="text-center">@ViewData["Title"]</h1>
     <br />
-    <h5>Quantidade de PAX Gold: @admPaxGoldTotal</h5>
-    <h5>Valor Investido - PAX Gold: R$ @PaxGoldInvestido</h5>
-    <h5>Valor Atual - PAX Gold: R$ @PaxGoldValorRS</h5>
+    <h5>Quantidade: @admPaxGoldTotal</h5>
+    <h5>Valor Investido: R$ @PaxGoldInvestido</h5>
+    <h5>Valor Atual: R$ @PaxGoldValorRS</h5>
 
     @if (lucroOuPerdaAdm > 0)
     {
