--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Xrp.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Xrp.cshtml
@@ -63,9 +63,9 @@
 
     <hr />
 
-    <h5>Quantidade de XRP @xrpQuantidade</h5>
-    <h5>Valor Investido - XRP: R$ @xrpInvestimento</h5>
-    <h5>Valor Atual - XRP: R$ @xrpValorReal</h5>
+    <h5>Quantidade: @xrpQuantidade</h5>
+    <h5>Valor Investido: R$ @xrpInvestimento</h5>
+    <h5>Valor Atual: R$ @xrpValorReal</h5>
 
     @if (lucroOuPerda > 0)
     {
@@ -136,9 +136,9 @@ else
     <br />
     <h1 class="text-center">@ViewData["Title"]</h1>
     <br />
-    <h5>Quantidade de XRP: @admXrpTotal</h5>
-    <h5>Valor Investido - XRP: R$ @XrpInvestido</h5>
-    <h5>Valor Atual - XRP: R$ @XrpValorRS</h5>
+    <h5>Quantidade: @admXrpTotal</h5>
+    <h5>Valor Investido: R$ @XrpInvestido</h5>
+    <h5>Valor Atual: R$ @XrpValorRS</h5>
 
     @if (lucroOuPerdaAdm > 0)
     {
